5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1675_1932.log
== TEST (2019-05-02 10:44:31) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1"))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1"))
c=float(input("distancia entre os olhos, da Imagem 2"))
d=float(input("distancia entre o nariz e o queixo, da Imagem 2"))
e=float(input("distancia entre os olhos, da Imagem 3"))
f=float(input("distancia entre o nariz e o queixo, da Imagem 3"))
f1= a/b
f2= c/d
f3= e/f
k= abs(f1-f2)
j= abs(f1-f3)
s= abs(f2-f3)

if(k<j and k<s):
	print("1 e 2")
elif(j<k and j<s):
	print("1 e 3")
elif(s<k and s<j):
	print("2 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:44:38) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1"))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1"))
c=float(input("distancia entre os olhos, da Imagem 2"))
d=float(input("distancia entre o nariz e o queixo, da Imagem 2"))
e=float(input("distancia entre os olhos, da Imagem 3"))
f=float(input("distancia entre o nariz e o queixo, da Imagem 3"))
f1= a/b
f2= c/d
f3= e/f
k= abs(f1-f2)
j= abs(f1-f3)
s= abs(f2-f3)

if(k<j and k<s):
	print("1 e 2")
elif(j<k and j<s):
	print("1 e 3")
elif(s<k and s<j):
	print("2 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:44:59) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1"))
c=float(input("distancia entre os olhos, da Imagem 2"))
d=float(input("distancia entre o nariz e o queixo, da Imagem 2"))
e=float(input("distancia entre os olhos, da Imagem 3"))
f=float(input("distancia entre o nariz e o queixo, da Imagem 3"))
f1= a/b
f2= c/d
f3= e/f
k= abs(f1-f2)
j= abs(f1-f3)
s= abs(f2-f3)

if(k<j and k<s):
	print("1 e 2")
elif(j<k and j<s):
	print("1 e 3")
elif(s<k and s<j):
	print("2 e 3")
-- ERROR:
File "XXXX", line 1
    a= float(input("distancia entre os olhos, da Imagem 1))
                                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:45:07) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1"))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1"))
c=float(input("distancia entre os olhos, da Imagem 2"))
d=float(input("distancia entre o nariz e o queixo, da Imagem 2"))
e=float(input("distancia entre os olhos, da Imagem 3"))
f=float(input("distancia entre o nariz e o queixo, da Imagem 3"))
f1= a/b
f2= c/d
f3= e/f
k= abs(f1-f2)
j= abs(f1-f3)
s= abs(f2-f3)

if(k<j and k<s):
	print("1 e 2")
elif(j<k and j<s):
	print("1 e 3")
elif(s<k and s<j):
	print("2 e 3")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:45:40) 
-- CODE:
a= float(input("distancia entre os olhos, da Imagem 1"))
b= float(input("distancia entre o nariz e o queixo, da Imagem 1"))
c=float(input("distancia entre os olhos, da Imagem 2"))
d=float(input("distancia entre o nariz e o queixo, da Imagem 2"))
e=float(input("distancia entre os olhos, da Imagem 3"))
f=float(input("distancia entre o nariz e o queixo, da Imagem 3"))
f1= a/b
f2= c/d
f3= e/f
k= abs(f1-f2)
j= abs(f1-f3)
s= abs(f2-f3)

if(k<j and k<s):
	print("1 e 2")
elif(j<k and j<s):
	print("1 e 3")
elif(s<k and s<j):
	print("2 e 3")
-- EXECUTION TIME:
0.168579
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
